chore: included fileLinks to all fileDTOs